Use script/quality instead of bin/quality

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,4 +24,4 @@ blocks:
       - name: quality
         commands:
           - brew install shellcheck
-          - bin/quality
+          - script/quality
