--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,6 +16,10 @@ auto_cancel:
 blocks:
   - name: Test
     task:
+      env_vars:
+        - name: HOMEBREW_NO_AUTO_UPDATE
+          value: "true"
+
       prologue:
         commands:
           - checkout
